# Mpi

./: .gitignore  CMakeLists.txt  README.md  machinefile  update.py  update_node.py
lib/mpich/include/: mpi.h  mpicxx.h  opa_config.h
lib/mpich/lib/pkgconfig/: mpich.pc  openpa.pc
src/: CMakeLists.txt  main.cc
test/: monte_carlo  prime  wave
test/benchmark/: cpiA.c  fox.c  head.c  monte.c  parallel_jacobi.c  particlesA.c  pi.c  point.c  reduceA.c  send.c  task_division.cpp
